--- a/app/index.html
+++ b/app/index.html
@@ -173,7 +173,7 @@
               </div>
             </div>
           </div>
-          <!--products__item-->
+          <!--/.products__item-->
 
           <div class="products__item mix category-wordpress" data-order="2">
             <a class="products__item-img" href="#"
@@ -201,7 +201,7 @@
               </div>
             </div>
           </div>
-          <!--products__item-->
+          <!--/.products__item-->
 
           <div class="products__item mix category-plugins" data-order="3">
             <a class="products__item-img" href="#"
@@ -229,7 +229,7 @@
               </div>
             </div>
           </div>
-          <!--products__item-->
+          <!--/.products__item-->
 
           <div class="products__item mix category-psd" data-order="4">
             <a class="products__item-img" href="#"
@@ -257,7 +257,7 @@
               </div>
             </div>
           </div>
-          <!--products__item-->
+          <!--/.products__item-->
 
           <div class="products__item category-joomla" data-order="5">
             <a class="products__item-img" href="#"
@@ -285,7 +285,7 @@
               </div>
             </div>
           </div>
-          <!--products__item-->
+          <!--/.products__item-->
 
           <div class="products__item category-wordpress" data-order="6">
             <a class="products__item-img" href="#"
@@ -313,7 +313,7 @@
               </div>
             </div>
           </div>
-          <!--products__item-->
+          <!--/.products__item-->
 
           <div class="products__item category-components category-popular" data-order="7">
             <a class="products__item-img" href="#"
@@ -341,7 +341,7 @@
               </div>
             </div>
           </div>
-          <!--products__item-->
+          <!--/.products__item-->
 
           <div class="products__item category-psd category-new" data-order="8">
             <a class="products__item-img" href="#"
@@ -369,10 +369,10 @@
               </div>
             </div>
           </div>
-          <!--products__item-->
+          <!--/.products__item-->
 
         </div>
-        <!--products__inner-box-->
+        <!--/.products__inner-box-->
       </div>
       <!--/.products__inner-->
       <div class="products__botom-btn">
@@ -416,7 +416,7 @@
             </div>
           </div>
         </div>
-        <!--products__slider-item-->
+        <!--/.products__slider-item-->
 
         <div class="products__item">
           <a class="products__item-img" href="#" style="background-image: url(images/content/products-item-1.jpg);"></a>
@@ -443,7 +443,7 @@
             </div>
           </div>
         </div>
-        <!--products__slider-item-->
+        <!--/.products__slider-item-->
 
         <div class="products__item">
           <a class="products__item-img" href="#" style="background-image: url(images/content/products-item-1.jpg);"></a>
@@ -470,7 +470,7 @@
             </div>
           </div>
         </div>
-        <!--products__slider-item-->
+        <!--/.products__slider-item-->
 
         <div class="products__item">
           <a class="products__item-img" href="#" style="background-image: url(images/content/products-item-1.jpg);"></a>
@@ -497,7 +497,7 @@
             </div>
           </div>
         </div>
-        <!--products__slider-item-->
+        <!--/.products__slider-item-->
 
         <div class="products__item">
           <a class="products__item-img" href="#" style="background-image: url(images/content/products-item-1.jpg);"></a>
@@ -524,7 +524,7 @@
             </div>
           </div>
         </div>
-        <!--products__slider-item-->
+        <!--/.products__slider-item-->
 
         <div class="products__item">
           <a class="products__item-img" href="#" style="background-image: url(images/content/products-item-1.jpg);"></a>
@@ -551,7 +551,7 @@
             </div>
           </div>
         </div>
-        <!--products__slider-item-->
+        <!--/.products__slider-item-->
 
         <div class="products__item">
           <a class="products__item-img" href="#" style="background-image: url(images/content/products-item-1.jpg);"></a>
@@ -578,7 +578,7 @@
             </div>
           </div>
         </div>
-        <!--products__slider-item-->
+        <!--/.products__slider-item-->
 
         <div class="products__item">
           <a class="products__item-img" href="#" style="background-image: url(images/content/products-item-1.jpg);"></a>
@@ -605,7 +605,7 @@
             </div>
           </div>
         </div>
-        <!--products__slider-item-->
+        <!--/.products__slider-item-->
 
         <div class="products__item">
           <a class="products__item-img" href="#" style="background-image: url(images/content/products-item-1.jpg);"></a>
@@ -632,7 +632,7 @@
             </div>
           </div>
         </div>
-        <!--products__slider-item-->
+        <!--/.products__slider-item-->
 
         <div class="products__item">
           <a class="products__item-img" href="#" style="background-image: url(images/content/products-item-1.jpg);"></a>
@@ -659,7 +659,7 @@
             </div>
           </div>
         </div>
-        <!--products__slider-item-->
+        <!--/.products__slider-item-->
 
         <div class="products__item">
           <a class="products__item-img" href="#" style="background-image: url(images/content/products-item-1.jpg);"></a>
@@ -686,7 +686,7 @@
             </div>
           </div>
         </div>
-        <!--products__slider-item-->
+        <!--/.products__slider-item-->
 
         <div class="products__item">
           <a class="products__item-img" href="#" style="background-image: url(images/content/products-item-1.jpg);"></a>
@@ -713,7 +713,7 @@
             </div>
           </div>
         </div>
-        <!--products__slider-item-->
+        <!--/.products__slider-item-->
 
         <div class="products__item">
           <a class="products__item-img" href="#" style="background-image: url(images/content/products-item-1.jpg);"></a>
@@ -740,7 +740,7 @@
             </div>
           </div>
         </div>
-        <!--products__slider-item-->
+        <!--/.products__slider-item-->
 
         <div class="products__item">
           <a class="products__item-img" href="#" style="background-image: url(images/content/products-item-1.jpg);"></a>
@@ -767,7 +767,7 @@
             </div>
           </div>
         </div>
-        <!--products__slider-item-->
+        <!--/.products__slider-item-->
 
         <div class="products__item">
           <a class="products__item-img" href="#" style="background-image: url(images/content/products-item-1.jpg);"></a>
@@ -794,7 +794,7 @@
             </div>
           </div>
         </div>
-        <!--products__slider-item-->
+        <!--/.products__slider-item-->
 
         <div class="products__item">
           <a class="products__item-img" href="#" style="background-image: url(images/content/products-item-1.jpg);"></a>
@@ -823,11 +823,11 @@
         </div>
         <!--products__slider-item-->
       </div>
-      <!-- ./product-slider__inner -->
+      <!-- /.product-slider__inner -->
     </div>
     <!-- /.container-fluid -->
   </section>
-  <!-- ./product-slider -->
+  <!-- /.product-slider -->
 
   <section class="advantages">
     <div class="container">
@@ -939,7 +939,19 @@
   </section>
   <!-- ./advantages-->
 
-
+<section class="author" style="background-image: url(images/author-bg.jpg);">
+  <div class="author__box">
+    <div class="author__title">
+      Более <span>20 000</span> 
+      Авторов На Нашей Площадке!
+    </div>
+    <a href="#" class="author__link">
+      Присоединиться
+    </a>
+  </div>
+  <!-- /.author__box -->
+</section>
+<!-- /.author -->
 
 
 
