--- a/app/index.html
+++ b/app/index.html
@@ -939,19 +939,59 @@
   </section>
   <!-- ./advantages-->
 
-<section class="author" style="background-image: url(images/author-bg.jpg);">
-  <div class="author__box">
-    <div class="author__title">
-      Более <span>20 000</span> 
-      Авторов На Нашей Площадке!
+  <section class="author" style="background-image: url(images/author-bg.jpg);">
+    <div class="author__box">
+      <div class="author__title">
+        Более <span>20 000</span>
+        Авторов На Нашей Площадке!
+      </div>
+      <a href="#" class="author__link">
+        Присоединиться
+      </a>
     </div>
-    <a href="#" class="author__link">
-      Присоединиться
-    </a>
-  </div>
-  <!-- /.author__box -->
-</section>
-<!-- /.author -->
+    <!-- /.author__box -->
+  </section>
+  <!-- /.author -->
+
+  <section class="tutorial">
+    <div class="container">
+      <div class="tutorial__title title">
+        Бесплатные Ежемесячные Уроки!
+      </div>
+      <div class="tutorial__inner">
+
+        <div class="tutorial__item">
+          <div class="tutorial__item-images" style="background-image: url(images/content/web.jpg)">
+          </div>
+          <div class="tutorial__item-name">
+            Web Design
+          </div>
+        </div>
+        <!-- /.tutorial__item -->
+
+        <div class="tutorial__item">
+          <div class="tutorial__item-images" style="background-image: url(images/content/wp.jpg)">            
+          </div>
+          <div class="tutorial__item-name">
+            WordPress
+          </div>
+        </div>
+        <!-- /.tutorial__item -->
+
+        <div class="tutorial__item">
+          <div class="tutorial__item-images" style="background-image: url(images/content/css.jpg)">
+          </div>
+          <div class="tutorial__item-name">
+            HTML & CSS Tutorials
+          </div>
+        </div>
+        <!-- /.tutorial__item -->
+      </div>
+      <!-- /.tutorial__inner -->
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.tutorial -->
 
 
 
