--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:600,700&display=swap&subset=cyrillic-ext" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:500,700&display=swap&subset=cyrillic-ext" rel="stylesheet">
   <link rel="stylesheet" href="css/libs.min.css">
   <link rel="stylesheet" href="css/style.min.css">
@@ -970,7 +971,7 @@
         <!-- /.tutorial__item -->
 
         <div class="tutorial__item">
-          <div class="tutorial__item-images" style="background-image: url(images/content/wp.jpg)">            
+          <div class="tutorial__item-images" style="background-image: url(images/content/wp.jpg)">
           </div>
           <div class="tutorial__item-name">
             WordPress
@@ -993,7 +994,92 @@
   </section>
   <!-- /.tutorial -->
 
+  <footer class="footer">
+    <div class="footer__content">
+      <div class="container">
+        <div class="footer__inner">
 
+          <div class="footer__col">
+            <div class="footer__col-title">
+              О компании
+            </div>
+            <div class="footer__col-text">
+                Мы предлагаем: удобный сервис, реальные гарантии, актуальные технологии.
+              <div class="footer__info">
+                Индекс 777777 Невский проспект, 1\1 офис 1.
+                г. Санкт-Петербург.
+              </div>
+              <a class="footer__info footer__info-phone " href="tel:+71383766284">
+                +7 138 376 62 84
+              </a>
+            </div>
+          </div>
+          <!-- /.footer__col -->
+
+          <div class="footer__col footer__col-menu">
+            <div class="footer__col-title">
+               Наши Сообщества
+            </div>
+            <ul class="footer__col-list">
+              <li><a href="#">Главная</a></li>
+              <li><a href="#">Форумы</a></li>
+              <li><a href="#">Встречи</a></li>
+              <li><a href="#">Стать Автором</a></li>
+              <li><a href="#">Стать Партнером</a></li>
+            </ul>
+          </div>
+          <!-- /.footer__col footer__col-menu -->
+
+          <div class="footer__col footer__col-menu">
+            <div class="footer__col-title">
+              Нужна помощь?
+            </div>
+            <ul class="footer__col-list">
+              <li><a href="#">Служба поддержки</a></li>
+              <li><a href="#">Условиях соглашения</a></li>
+              <li><a href="#">Условия для Авторов</a></li>
+              <li><a href="#">Foxtar Лицензии</a></li>
+              <li><a href="#">Связаться С Нами</a></li>
+            </ul>
+          </div>
+          <!-- /.footer__col footer__col-menu -->
+
+          <div class="footer__col">
+            <div class="footer__col-title">
+              Подпишись на нас
+            </div>
+            <ul class="footer__social-link">
+              <li><a class="link-facebook" href="#"></a></li>
+              <li><a class="link-tweeter" href="#"></a></li>
+              <li><a class="link-youtube" href="#"></a></li>
+              <li><a class="link-pinterest" href="#"></a></li>
+              <li><a class="link-linkedin" href="#"></a></li>
+            </ul>
+            <div class="footer__form">
+              <div class="footer__form-title">
+                  Получай новости первым!
+              </div>
+                <form>
+                  <input type="text" placeholder="E-mail Address">
+                  <button type="submit"></button>
+                </form>
+            </div>
+          </div>
+          <!-- /.footer__col -->
+        </div>
+        <!-- /.footer__inner -->
+      </div>
+      <!-- /.container -->
+    </div>
+    <!-- ./footer__content -->
+    <div class="footer__copy">
+      <div class="container">
+        <div class="footer__copy-text">
+          © 2019 Moderno Market Place. Товарные знаки и торговые марки являются собственностью их владельцев. Любое копирование материалов без ссылки на источник, строго запрещено и преследуется законом РФ.
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/libs.min.js"></script>
