--- a/app/new-items.html
+++ b/app/new-items.html
@@ -763,11 +763,11 @@
                 Наши Сообщества
               </div>
               <ul class="footer__col-list">
-                <li><a href="#">Главная</a></li>
-                <li><a href="#">Форумы</a></li>
-                <li><a href="#">Встречи</a></li>
-                <li><a href="#">Стать Автором</a></li>
-                <li><a href="#">Стать Партнером</a></li>
+                <li><a class="angle-right" href="#">Главная</a></li>
+                <li><a class="angle-right" href="#">Форумы</a></li>
+                <li><a class="angle-right" href="#">Встречи</a></li>
+                <li><a class="angle-right" href="#">Стать Автором</a></li>
+                <li><a class="angle-right" href="#">Стать Партнером</a></li>
               </ul>
             </div>
             <!-- /.footer__col footer__col-menu -->
@@ -777,11 +777,11 @@
                 Нужна помощь?
               </div>
               <ul class="footer__col-list">
-                <li><a href="#">Служба поддержки</a></li>
-                <li><a href="#">Условиях соглашения</a></li>
-                <li><a href="#">Условия для Авторов</a></li>
-                <li><a href="#">Foxtar Лицензии</a></li>
-                <li><a href="#">Связаться С Нами</a></li>
+                <li><a class="angle-right" href="#">Служба поддержки</a></li>
+                <li><a class="angle-right" href="#">Условиях соглашения</a></li>
+                <li><a class="angle-right" href="#">Условия для Авторов</a></li>
+                <li><a class="angle-right" href="#">Foxtar Лицензии</a></li>
+                <li><a class="angle-right" href="#">Связаться С Нами</a></li>
               </ul>
             </div>
             <!-- /.footer__col footer__col-menu -->
