adaptive header&footer

--- a/app/new-items.html
+++ b/app/new-items.html
@@ -33,9 +33,195 @@
                 <a class="header__phone" href="tel:+71383766284">+7 138 376 62 84</a>
               </div>
               <div class="header__box">
-                <a class="basket" href="#"></a>
-                <a class="header__btn header__btn-login" href="#">Войти</a>
-                <a class="header__btn header__btn-register" href="#">Регистрация</a>
+                <div class="notification__box">
+                  <a class="notification header__circle active icon-bell-o" href="#">
+                    <span>8</span>
+                  </a>
+                  <div class="circle__menu notification__menu">
+
+                    <a href="#" class="circle__item icon-bell-o icon-color">
+                      <img class="circle__images" src="images/content/user-notifi.jpg" alt="">
+                      <div class="circle__info">
+                        <div class="circle__info-theme">
+                          WordPress
+                        </div>
+                        <div class="circle__info-date">
+                          03.12.2019
+                        </div>
+                      </div>
+                    </a>
+
+                    <a href="#" class="circle__item icon-bell-o">
+                      <img class="circle__images" src="images/content/user-notifi-2.jpg" alt="">
+                      <div class="circle__info">
+                        <div class="circle__info-theme">
+                          WordPress
+                        </div>
+                        <div class="circle__info-date">
+                          03.12.2019
+                        </div>
+                      </div>
+                    </a>
+
+                    <a href="#" class="circle__item icon-bell-o">
+                      <img class="circle__images" src="images/content/user-notifi-3.jpg" alt="">
+                      <div class="circle__info">
+                        <div class="circle__info-theme">
+                          WordPress
+                        </div>
+                        <div class="circle__info-date">
+                          03.12.2019
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                <div class="message__box">
+                  <a class="message header__circle active icon-envelope-o" href="#">
+                    <span>5</span>
+                  </a>
+
+                  <div class="circle__menu message__menu">
+
+                    <a href="#" class="circle__item icon-envelope-o icon-color">
+                      <img class="circle__images" src="images/content/user-notifi-3.jpg" alt="">
+                      <div class="circle__info">
+                        <div class="circle__info-name">
+                          PsdBosS
+                        </div>
+                        <div class="circle__info-theme">
+                          Hi! I wait..
+                        </div>
+                        <div class="circle__info-date">
+                          03.12.2019
+                        </div>
+                      </div>
+                    </a>
+
+                    <a href="#" class="circle__item icon-mail-reply">
+                      <img class="circle__images" src="images/content/user-notifi-2.jpg" alt="">
+                      <div class="circle__info">
+                        <div class="circle__info-name">
+                          Kazi Fahim
+                        </div>
+                        <div class="circle__info-theme">
+                          PSD Help..
+                        </div>
+                        <div class="circle__info-date">
+                          03.12.2019
+                        </div>
+                      </div>
+                    </a>
+
+                    <a href="#" class="circle__item icon-envelope-o">
+                      <img class="circle__images" src="images/content/user-notifi.jpg" alt="">
+                      <div class="circle__info">
+                        <div class="circle__info-name">
+                          Richi Lenal
+                        </div>
+                        <div class="circle__info-theme">
+                          Nice job!
+                        </div>
+                        <div class="circle__info-date">
+                          03.12.2019
+                        </div>
+                      </div>
+                    </a>
+
+                  </div>
+                  <!-- /.circle__menu message__menu -->
+                </div>
+                <!-- /.message__box -->
+
+                <div class="basket__box">
+                  <a class="basket header__circle active icon-shopping-cart" href="#">
+                    <span>8</span>
+                  </a>
+                  <div class="circle__menu">
+                    <div class="circle__item">
+                      <img class="circle__images" src="images/content/basket-item-1.jpg" alt="">
+                      <div class="circle__info">
+                        <a href="#" class="circle__info-name">
+                          Template
+                        </a>
+                        <div class="circle__info-theme">
+                          WordPress
+                        </div>
+                        <div class="circle__info-price">
+                          $69
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="circle__item">
+                      <img class="circle__images" src="images/content/basket-item-2.jpg" alt="">
+                      <div class="circle__info">
+                        <a href="#" class="circle__info-name">
+                          Bot
+                        </a>
+                        <div class="circle__info-theme">
+                          Telegram bot
+                        </div>
+                        <div class="circle__info-price">
+                          $100
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="basket__sum">
+                      <div class="basket__title">
+                        <div class="basket__sum-total">
+                          Всего
+                        </div>
+                        <div class="basket__sum-price">
+                          $169
+                        </div>
+                      </div>
+                      <a class="basket__btn " href="#">Оплатить</a>
+                      <a class="basket__btn basket__btn-chekout" href="#">Корзина</a>
+                    </div>
+
+                  </div>
+                  <!-- /.basket__menu -->
+                </div>
+                <!-- /.basket__box -->
+
+                <div class="user">
+                  <a class="user__box" href="#">
+                    <div class="user__box-inner">
+                      <div class="user__box-images">
+                        <img src="images/content/user-avatar.jpg" alt="">
+                      </div>
+                      <div class="user__box-info">
+                        <div class="user__box-name">
+                          Gucci Gang
+                        </div>
+                        <div class="user__box-money">
+                          $777.00
+                        </div>
+                      </div>
+                    </div>
+                  </a>
+                  <div class="user__menu">
+                    <ul>
+                      <li><a class="angle-right" href="#">Профиль</a></li>
+                      <li><a class="angle-right" href="#">Портфолио</a></li>
+                      <li><a class="angle-right" href="#">Настройки</a></li>
+                      <li><a class="angle-right" href="#">Мои товары</a></li>
+                      <li><a class="angle-right" href="#">Загрузить товар</a></li>
+                      <li><a class="angle-right" href="#">Список желаний</a></li>
+                      <li><a class="angle-right" href="#">Баланс</a></li>
+                      <li><a class="angle-right" href="#">Выйти</a></li>
+                    </ul>
+                  </div>
+                </div>
+                <a class="header__btn header__btn-login header__btn--on" href="#">login</a>
+                <a class="header__btn header__btn-logout header__btn--off" href="#">logout</a>
+                <a class="header__btn header__btn-register header__btn--on" href="#">Register</a>
+              </div>
+              <!-- /.header__box -->
+              <div class="header__btn-menu icon-user">
+
               </div>
             </div>
             <!--/.header__top-inner-->
@@ -47,6 +233,11 @@
         <div class="header__menu">
           <div class="container">
             <nav class="menu">
+              <div class="menu__btn">
+                <div></div>
+                <div></div>
+                <div></div>
+              </div>
               <ul class="menu__list">
                 <li>
                   <a href="#">
@@ -741,7 +932,7 @@
         <div class="container">
           <div class="footer__inner">
 
-            <div class="footer__col">
+            <div class="footer__col footer__col-adress">
               <div class="footer__col-title">
                 О компании
               </div>
@@ -786,7 +977,7 @@
             </div>
             <!-- /.footer__col footer__col-menu -->
 
-            <div class="footer__col">
+            <div class="footer__col footer__col-social">
               <div class="footer__col-title">
                 Подпишись на нас
               </div>
