--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
                 <a class="header__phone" href="tel:+71383766284">+7 138 376 62 84</a>
               </div>
               <div class="header__box">
-                <div class="notification__box">
+                <div class="notification__box header__btn--off">
                   <a class="notification header__circle active icon-bell-o" href="#">
                     <span>8</span>
                   </a>
@@ -77,7 +77,7 @@
                     </a>
                   </div>
                 </div>
-                <div class="message__box">
+                <div class="message__box header__btn--off">
                   <a class="message header__circle active icon-envelope-o" href="#">
                     <span>5</span>
                   </a>
@@ -134,13 +134,13 @@
                 </div>
                 <!-- /.message__box -->
 
-                <div class="busket__box">
+                <div class="basket__box">
                   <a class="basket header__circle active icon-shopping-cart" href="#">
                     <span>8</span>
                   </a>
                   <div class="circle__menu">
                     <div class="circle__item">
-                      <img class="circle__images" src="images/content/busket-item-1.jpg" alt="">
+                      <img class="circle__images" src="images/content/basket-item-1.jpg" alt="">
                       <div class="circle__info">
                         <a href="#" class="circle__info-name">
                           Template
@@ -155,7 +155,7 @@
                     </div>
 
                     <div class="circle__item">
-                      <img class="circle__images" src="images/content/busket-item-2.jpg" alt="">
+                      <img class="circle__images" src="images/content/basket-item-2.jpg" alt="">
                       <div class="circle__info">
                         <a href="#" class="circle__info-name">
                           Bot
@@ -169,26 +169,26 @@
                       </div>
                     </div>
 
-                    <div class="busket__sum">
-                      <div class="busket__title">
-                        <div class="busket__sum-total">
+                    <div class="basket__sum">
+                      <div class="basket__title">
+                        <div class="basket__sum-total">
                           Всего
                         </div>
-                        <div class="busket__sum-price">
+                        <div class="basket__sum-price">
                           $169
                         </div>
                       </div>
-                      <a class="busket__btn " href="#">Оплатить</a>
-                      <a class="busket__btn busket__btn-chekout" href="#">Корзина</a>
+                      <a class="basket__btn " href="#">Оплатить</a>
+                      <a class="basket__btn basket__btn-chekout" href="#">Корзина</a>
                     </div>
 
                   </div>
-                  <!-- /.busket__menu -->
+                  <!-- /.basket__menu -->
                 </div>
-                <!-- /.busket__box -->
+                <!-- /.basket__box -->
 
                 <div class="user">
-                  <a class="user__box" href="#">
+                  <a class="user__box header__btn--off" href="#">
                     <div class="user__box-inner">
                       <div class="user__box-images">
                         <img src="images/content/user-avatar.jpg" alt="">
@@ -212,15 +212,18 @@
                       <li><a class="angle-right" href="#">Загрузить товар</a></li>
                       <li><a class="angle-right" href="#">Список желаний</a></li>
                       <li><a class="angle-right" href="#">Баланс</a></li>
-                      <li><a class="angle-right" href="#">Промокод</a></li>
+                      <li><a class="angle-right" href="#">Выйти</a></li>
                     </ul>
                   </div>
                 </div>
-                <a class="header__btn header__btn-login header__btn-login--off" href="#">Войти</a>
-                <a class="header__btn header__btn-logout header__btn-login--on" href="#">Выйти</a>
-                <a class="header__btn header__btn-register header__btn-login--off" href="#">Регистрация</a>
+                <a class="header__btn header__btn-login header__btn--on" href="#">login</a>
+                <a class="header__btn header__btn-logout header__btn--off" href="#">logout</a>
+                <a class="header__btn header__btn-register header__btn--on" href="#">Register</a>
               </div>
               <!-- /.header__box -->
+              <div class="header__btn-menu icon-user">
+
+              </div>
             </div>
             <!--/.header__top-inner-->
           </div>
@@ -231,6 +234,11 @@
         <div class="header__menu">
           <div class="container">
             <nav class="menu">
+              <div class="menu__btn">
+                <div></div>
+                <div></div>
+                <div></div>
+              </div>
               <ul class="menu__list">
                 <li>
                   <a href="#">
@@ -1104,7 +1112,6 @@
                    V171.882C322.161,161.722,313.904,153.483,303.761,153.483z M123.519,99.692c0-34.687,28.21-62.897,62.896-62.897
                    c34.678,0,62.889,28.21,62.889,62.897v53.791H123.519V99.692z" />
                   </g>
-
                 </svg>
               </div>
               <div class="advantages__item-title">
@@ -1181,7 +1188,7 @@
         <div class="container">
           <div class="footer__inner">
 
-            <div class="footer__col">
+            <div class="footer__col footer__col-adress">
               <div class="footer__col-title">
                 О компании
               </div>
@@ -1226,7 +1233,7 @@
             </div>
             <!-- /.footer__col footer__col-menu -->
 
-            <div class="footer__col">
+            <div class="footer__col footer__col-social">
               <div class="footer__col-title">
                 Подпишись на нас
               </div>
