--- a/app/product-one.html
+++ b/app/product-one.html
@@ -8,7 +8,7 @@
   <title>Document</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:600,700&display=swap&subset=cyrillic-ext"
     rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:500,700&display=swap&subset=cyrillic-ext" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,500,700&display=swap&subset=cyrillic-ext" rel="stylesheet">
   <link rel="stylesheet" href="css/libs.min.css">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -377,7 +377,7 @@
                 </div>
                 <div class="tab_content">
                   <div class="tab-item active-tab" id="1">
-                    <ul class="tab-item__list">                                                                                      
+                    <ul class="tab-item__list">
                       <li class="angle-right">современный</li>
                       <li class="angle-right">стильный</li>
                       <li class="angle-right">недорогой</li>
@@ -389,41 +389,41 @@
                   </div>
 
                   <div class="tab-item" id="2">
-                      <ul class="tab-item__list">                                                                                      
-                          <li class="angle-right">современный</li>
-                          <li class="angle-right">стильный</li>
-                          <li class="angle-right">недорогой</li>
-                          <li class="angle-right">качественный</li>
-                          <li class="angle-right">full HD+</li>
-                          <li class="angle-right">Лучший на это неделе</li>
-                          <li class="angle-right">Топ 5 месяца</li>
-                          <li class="angle-right">качественный</li>
-                          <li class="angle-right">full HD+</li>
-                          <li class="angle-right">Лучший на это неделе</li>
-                          <li class="angle-right">Топ 5 месяца</li>
-                        </ul>
+                    <ul class="tab-item__list">
+                      <li class="angle-right">современный</li>
+                      <li class="angle-right">стильный</li>
+                      <li class="angle-right">недорогой</li>
+                      <li class="angle-right">качественный</li>
+                      <li class="angle-right">full HD+</li>
+                      <li class="angle-right">Лучший на это неделе</li>
+                      <li class="angle-right">Топ 5 месяца</li>
+                      <li class="angle-right">качественный</li>
+                      <li class="angle-right">full HD+</li>
+                      <li class="angle-right">Лучший на это неделе</li>
+                      <li class="angle-right">Топ 5 месяца</li>
+                    </ul>
                   </div>
 
                   <div class="tab-item" id="3">
-                      <ul class="tab-item__list">                                                                                      
-                          <li class="angle-right">современный</li>
-                          <li class="angle-right">стильный</li>
-                          <li class="angle-right">full HD+</li>
-                          <li class="angle-right">Лучший на это неделе</li>
-                          <li class="angle-right">Топ 5 месяца</li>
-                        </ul>
+                    <ul class="tab-item__list">
+                      <li class="angle-right">современный</li>
+                      <li class="angle-right">стильный</li>
+                      <li class="angle-right">full HD+</li>
+                      <li class="angle-right">Лучший на это неделе</li>
+                      <li class="angle-right">Топ 5 месяца</li>
+                    </ul>
                   </div>
 
                   <div class="tab-item" id="4">
-                      <ul class="tab-item__list">                                                                                      
-                          <li class="angle-right">современный</li>
-                          <li class="angle-right">стильный</li>
-                          <li class="angle-right">недорогой</li>
-                          <li class="angle-right">качественный</li>
-                          <li class="angle-right">Премия 2019</li>
-                          <li class="angle-right">Лучший на это неделе</li>
-                          <li class="angle-right">Топ 5 месяца</li>
-                        </ul>
+                    <ul class="tab-item__list">
+                      <li class="angle-right">современный</li>
+                      <li class="angle-right">стильный</li>
+                      <li class="angle-right">недорогой</li>
+                      <li class="angle-right">качественный</li>
+                      <li class="angle-right">Премия 2019</li>
+                      <li class="angle-right">Лучший на это неделе</li>
+                      <li class="angle-right">Топ 5 месяца</li>
+                    </ul>
                   </div>
 
                 </div>
@@ -502,8 +502,93 @@
             <!-- /.product-one__content -->
 
             <div class="product-one__aside">
+              <div class="aside__item product__price">
+                <div class="aside__title">
+                  Цена
+                </div>
+                <div class="price__box">
+                  <div class="price__product">
+                    $59.00
+                  </div>
+                  <form>
+                    <select>
+                      <option>Regular</option>
+                      <option>Premium</option>
+                    </select>
+                  </form>
+                </div>
+                <button class="icon-shopping-cart">В корзину</button>
+                <button class="icon-heart-o">В избранное</button>
+                <button>Купить</button>
 
+              </div>
+
+              <div class="aside__item">
+                <div class="aside__title">
+                  Автор
+                </div>
+                <div class="product-autor__box">
+                  <div class="autor__avatar">
+                    <img src="images/content/avatar-aside.jpg" alt="">
+                  </div>
+                  <div class="autor__info">
+                    <div class="autor__name">
+                      WPchain
+                    </div>
+                    <div class="autor__link">
+                      <a href="">Профиль</a>
+                    </div>
+                  </div>
+                </div>
+                <ul class="autor__awords-list">
+                  <li class="icon-meh-o"></li>
+                  <li class="icon-pagelines"></li>
+                  <li class="icon-flash"></li>
+                  <li class="icon-foursquare"></li>
+                  <li class="icon-yen"></li>
+                </ul>
+              </div>
+              <div class="aside__item sales">
+                <div class="aside__item-sales">
+                  <span>05</span> Купили
+                </div>
+              </div>
+
+              <div class="aside__item">
+                <div class="aside__title">
+                  Информация
+                </div>
+
+                <div class="aside__info-line">
+                  <span>Выпуск:</span>
+                  1 January, 2019
+                </div>
+                <div class="aside__info-line">
+                  <span>Обновлено:</span>
+                  20 April, 2019
+                </div>
+                <div class="aside__info-line">
+                  <span>Загрузок:</span>
+                  613
+                </div>
+                <div class="aside__info-line">
+                  <span>Версия:</span>
+                  1.1
+                </div>
+                <div class="aside__info-line">
+                  <span>Совместимость:</span>
+                  Wordpress 4+
+                </div>
+                <div class="aside__info-line">
+                  <span>Поддержка браузеров:</span> <br>
+                  IE9, IE10, IE11, Firefox, Safari,
+                  Opera, Chrome
+                </div>
+
+              </div>
             </div>
+            <!-- /.product-one__aside -->
+
           </div>
           <!-- /.product-one__inner -->
         </div>
