--- a/app/404.html
+++ b/app/404.html
@@ -8,7 +8,8 @@
   <title>Document</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:600,700,800&display=swap&subset=cyrillic-ext"
     rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,500,700&display=swap&subset=cyrillic-ext" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,500,700&display=swap&subset=cyrillic-ext"
+    rel="stylesheet">
   <link rel="stylesheet" href="css/libs.min.css">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -299,6 +300,46 @@
         <!--/.header__menu-->
       </header>
 
+      <div class="breadcrumbs">
+        <div class="container">
+          <div class="breadcrumbs__inner">
+            <ul class="breadcrumbs__list">
+              <li><a href="#">Главная</a></li>
+              <li><span>Page 404</span></li>
+            </ul>
+          </div>
+          <!-- /.breadcrumbs__inner -->
+        </div>
+        <!-- /.container -->
+      </div>
+      <!-- /.breadcrumbs -->
+
+      <div class="page-404">
+        <div class="container">
+          <div class="page-404__wrapper">
+            <div class="page-404__head">
+              Error Page
+            </div>
+            <div class="page-404__inner">
+              <div class="page-404__error">
+                404
+              </div>
+              <div class="page-404__title">
+                Sorry Page Was Not Found
+              </div>
+              <div class="page-404__text">
+                The page you are looking is not available or has been removed.
+                Try going to Home Page by using the button below.
+              </div>             
+                <a class="page-404__link" href="">Go To Home Page</a>
+            </div>
+            <!-- /.page-404__inner -->
+          </div>
+          <!-- /.wrapper -->
+        </div>
+        <!-- /.container -->
+      </div>
+      <!-- /.page-404 -->
 
 
     </div>
