--- a/app/product-one.html
+++ b/app/product-one.html
@@ -6,9 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:600,700&display=swap&subset=cyrillic-ext"
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:600,700,800&display=swap&subset=cyrillic-ext"
     rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,500,700&display=swap&subset=cyrillic-ext" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,500,700&display=swap&subset=cyrillic-ext"
+    rel="stylesheet">
   <link rel="stylesheet" href="css/libs.min.css">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -520,7 +521,6 @@
                 <button class="icon-shopping-cart">В корзину</button>
                 <button class="icon-heart-o">В избранное</button>
                 <button>Купить</button>
-
               </div>
 
               <div class="aside__item">
@@ -584,7 +584,6 @@
                   IE9, IE10, IE11, Firefox, Safari,
                   Opera, Chrome
                 </div>
-
               </div>
             </div>
             <!-- /.product-one__aside -->
