--- a/app/about.html
+++ b/app/about.html
@@ -305,7 +305,7 @@
           <div class="breadcrumbs__inner">
             <ul class="breadcrumbs__list">
               <li><a href="#">Главная</a></li>
-              <li><span>Page 404</span></li>
+              <li><span>О нас</span></li>
             </ul>
           </div>
           <!-- /.breadcrumbs__inner -->
@@ -314,33 +314,33 @@
       </div>
       <!-- /.breadcrumbs -->
 
-      <div class="page-404">
+      <div class="about">
         <div class="container">
-          <div class="page-404__wrapper">
-            <div class="page-404__head">
-              Error Page
+          <div class="about__wrapper">
+            <div class="about__head">
+              О нас
             </div>
-            <div class="page-404__inner">
-              <div class="page-404__error">
-                404
+            <div class="about__inner">
+
+              <div class="about__box">
+                <h3>Немного о компании</h3>
+                <p>Вас когда-нибудь посещала мысль, что ваша компания — это динамично развивающийся молодой коллектив
+                  профессионалов? Наверняка в голову приходило и не такое, когда вы писали текст на страницу «О
+                  компании».</p>
               </div>
-              <div class="page-404__title">
-                Sorry Page Was Not Found
+
+              <div class="about__box">
+                <h3>Наша миссия</h3>
+                <p>Наша миссия состоит в том, чтобы помочь людям и бизнес-организациям по всему миру полностью реализовать свой полный потенциал. Для достижения этой цели требуются талантливые, энергичные, яркие и творческие люди, обладающие следующими достоинствами: добросовестность и честность, энтузиазм, открытость и уважение, готовность решать сложные проблемы, самокритичность и ответственность.</p>
               </div>
-              <div class="page-404__text">
-                The page you are looking is not available or has been removed.
-                Try going to Home Page by using the button below.
-              </div>
-              <a class="page-404__link" href="">Go To Home Page</a>
             </div>
-            <!-- /.page-404__inner -->
+            <!-- /.page-about__inner -->
           </div>
-          <!-- /.wrapper -->
+          <!-- /.about__wrapper -->
         </div>
         <!-- /.container -->
       </div>
-      <!-- /.page-404 -->
-
+      <!-- /.about -->
 
     </div>
     <footer class="footer">
